--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/adrienneeaston/city-explorer/issues"
   },
-  "homepage": "https://github.com/adrienneeaston/city-explorer#readme"
+  "homepage": "https://github.com/adrienneeaston/city-explorer#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  }
 }
